@@ -16,6 +16,7 @@ TO DO
 - stylesheet: keycap inside keycombo
 - help viewer: two tabs, contents and index. index browser
 - documentation to do
+  - mmb click in fs browser
   - File->Recent Directories menu
   - being able to use ~ in path names
   - status bar in file dialogs
@@ -54,7 +55,6 @@ TO DO
   - recursive directory delete
   - right-click menu: show all toolbar options
   - easier way for plugins to add right-click menu commands
-  - mmb click in fs browser == double click
   - directory chooser dialog box
   - keyboard select file should activate open files -- or Enter press
   - search in directory: should use that file's extension
