@@ -19,6 +19,8 @@ JEDIT 4.0 VERSION HISTORY
   - A+d: delete next character
 - File->Recent Directories menu lists directories that were recently
   visted in the file system browser
+- A new View->Docking menu; contains commands for closing the left, top,
+  right and bottom docking areas
 
 + Enhancements
 
@@ -41,6 +43,8 @@ JEDIT 4.0 VERSION HISTORY
 - Improved undo
 - File selection dialog boxes now have a status bar that shows the number
   of pending I/O requests
+- Middle mouse button click in file system browser now has the same
+  effect as double-clicking
 
 + Bug Fixes
 
